refactor: 방어적 복사 방식 변경을 통해 불변성 강화
- 기존 Collections.unmodifiableList 의 'View' 방식에서 'Snapshot' 방식인
List.copyOf로 변경
- 원본 리스트의 변경이 도메인 객체 내부 리스트에 영향을 주지 않도록 원본과의 참조 연결을 완전히 차단